--- a/www/css/main.css
+++ b/www/css/main.css
@@ -106,6 +106,12 @@ header {
   width: 100%;
   background: #e74c3c;
   color: white;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+}
+header h1 {
+  margin: 0.8rem;
 }
 header h1 small {
   font-size: 43%;
@@ -115,12 +121,13 @@ header a {
   text-decoration: none;
   text-transform: uppercase;
   padding: 1rem;
-  margin-top: 2rem;
+  margin-top: .9rem;
   display: inline-block;
 }
 #home {
   background: #e74c3c;
   color: white;
+  padding-top: 130px;
 }
 #home h1 {
   font-size: 3rem;
@@ -132,7 +139,7 @@ header a {
   font-weight: 300;
 }
 #features img {
-  width: 150px;
+  width: 100px;
 }
 #features h2 {
   font-weight: 300;
@@ -146,6 +153,9 @@ header a {
 #features a:active,
 #features a:hover {
   color: #2ecc71;
+}
+#features .row {
+  margin-bottom: 2rem;
 }
 #docu ul {
   padding: 0;
