--- a/www/css/less/main.less
+++ b/www/css/less/main.less
@@ -108,10 +108,13 @@ header{
 	}
 }
 
+article{
+	margin-top: 74px;
+}
+
 #home{
 	background: @mainColor;
 	color:white;
-	padding-top: 130px;
 	h1{
 		font-size: 3rem;
 		color:@clouds;
