--- a/www/css/less/main.less
+++ b/www/css/less/main.less
@@ -57,6 +57,15 @@ html{
 
 @mainColor: @alizarin;
 
+.button{
+	background: @mainColor;
+	&:active, &:visited{
+		background: @mainColor;
+	}
+	&:hover{
+		background: darken(@mainColor, 20%);
+	}
+}
 p{
 	font-weight: 400;
 	color:@midnightblue;
