--- a/www/css/less/main.less
+++ b/www/css/less/main.less
@@ -66,7 +66,7 @@ html{
 		background: darken(@mainColor, 20%);
 	}
 }
-p{
+p, li{
 	font-weight: 400;
 	color:@midnightblue;
 	font-size: 1.1rem;
@@ -118,7 +118,7 @@ header{
 }
 
 article{
-	margin-top: 74px;
+	margin-top: 4rem;
 }
 
 #home{
@@ -155,7 +155,7 @@ article{
 	}
 }
 #demo{
-
+	background: @turquoise;
 	.frame-holder{
 		position: relative;
 		img{
@@ -171,7 +171,7 @@ article{
 	}
 }
 #docu{
-	ul{
+	ul.menu{
 		padding: 0;
 		margin: 0;
 		li{
@@ -190,6 +190,12 @@ article{
 	}
 	code{
 		color: darken(@peterriver, 25%);
+	}
+}
+
+@media only screen and (max-width: 40.063em) {
+	html{
+		font-size: 70%;
 	}
 }
 
